# lapack-cmake-meson

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.py  build_atlas.sh  build_intel.py  build_mkl.sh  build_pgi.bat  meson.build  meson_options.txt  test_build.sh
.github/workflows/: ci.yml  ci_cmake.yml  ci_meson.yml
archive/: .appveyor.yml  .travis.yml  build.py  build_intel.bat  build_msvc.bat
c_src/: CMakeLists.txt  example_gesvd.c  meson.build
cmake/Modules/: FindLAPACK.cmake
factory/: CMakeLists.txt
fortran_src/: CMakeLists.txt  atlas_svd.f90  blas_matmul.f90  example_gesvd.f90  lapack_svd.f90  meson.build
